Phase 1: data acquisition and exploratory analysis